[build-system]
requires = ["meson-python"]
build-backend = "mesonpy"

[project]
name = "impuls"
version = "2.4.1"
readme = "readme.md"
requires-python = "~=3.10"
dependencies = ["requests ~= 2.32", "pyyaml ~= 6.0", "typing_extensions ~= 4.1"]
authors = [{name = "Mikołaj Kuranowski", email = "mkuranowski@gmail.com"}]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=examples"

[tool.pyright]
typeCheckingMode = "strict"
reportUnusedImport = false
reportPrivateUsage = false
